# qck-backend-core

./: .env.dev  .env.example  .env.prod  .env.prod.arm  .env.test  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.prod.arm  Dockerfile.test  JWT_SETUP.md  MIGRATION_SETUP.md  README.md  dev116_test.rs  diesel.toml  docker-compose.dev.yml  docker-compose.prod.arm.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  fix_migrations.sql  run-tests.sh  rustfmt.toml  test.rs
.claude/memory/: 2025-01-08-code-review-dev90.md  index.md
.claude/memory/architecture/: 2025-08-08-production-scaling-1m-clicks.md  2025-08-08-test-organization-best-practices.md
.claude/memory/features/: 2025-08-08-redis-connection-pool.md
.claude/memory/tasks/: 2025-08-08-complete-users-schema.md  2025-08-08-database-migration-system.md
.githooks/: pre-commit  pre-push
.github/workflows/: notify-shell.yml  sync-submodules.yml
benches/: short_code_bench.rs
data/: blocked_domains.json  profanity_list.json  reserved_words.json
docs/: API.md  API_REFRESH_TOKEN_ROTATION.md  CLICK_TRACKING_STRATEGY.md  VIRAL_SCALING_STRATEGY.md  demo_users.md  swagger-ui.html
docs/bulk_import_samples/: bulk_10_test.csv
docs/openapi/: auth-login.yaml  auth-register.yaml
migrations/: 20250108000001_initial_schema.sql  20250108000002_complete_users_schema.sql  20250108_000001_initial_schema.sql  20250109000003_links_table_schema.sql  20250110000001_complete_indexes.sql  README.md  SAFETY.md
migrations/clickhouse/: 001_analytics_events.sql  002_urlhaus_threats.sql  004_link_totals_table.sql  005_seed_demo_link_events.sql  20250812000002_link_stats_optimization.sql  20250812000003_link_totals_table.sql
migrations/diesel/2025-01-08-000001_initial_schema/: down.sql  up.sql
migrations/diesel/2025-08-22-133222_create_refresh_tokens/: down.sql  up.sql
migrations/diesel/2025-08-24-043551_add_user_profile_fields/: down.sql  up.sql
migrations/diesel/2025-08-24-060414_add_onboarding_and_payment_status/: down.sql  up.sql
migrations/diesel/2025-08-25-122440_change_refresh_tokens_ip_to_text/: down.sql  up.sql
migrations/diesel/2025-08-25-161133_create_password_reset_tokens/: up.sql
migrations/diesel/2025-08-25-162000_change_ip_address_to_text/: down.sql  up.sql
migrations/diesel/2025-08-29-072311_create_links_table/: down.sql  up.sql
migrations/diesel/2025-09-01-074056_seed_demo_users/: down.sql  up.sql
migrations/diesel/2025-09-01-081950_enhanced_demo_links_seed/: down.sql  up.sql
scripts/: auto_seed.sh  clickhouse-entrypoint.sh  diesel-migrate-prod.sh  diesel-migrate.sh  migrate.sh  test_10m_production.sql  test_1m_production.sql  test_5m_detailed_timing.sql  test_5m_production.sql
src/: app.rs  app_config.rs  lib.rs  main.rs  schema.rs
src/config/: mod.rs  permissions.rs  rate_limit.rs
src/db/: clickhouse_client.rs  clickhouse_insert_builder.rs  clickhouse_query_builder.rs  config.rs  diesel_pool.rs  mod.rs  postgres.rs  redis_config.rs  redis_pool.rs
src/handlers/: auth.rs  links.rs  mod.rs  onboarding.rs
src/handlers/docs/: auth.rs  health.rs  links.rs  mod.rs  onboarding.rs  redirect.rs  schemas.rs  swagger_ui.rs
src/handlers/redirect/: mod.rs  pages.rs
src/middleware/: auth.rs  auth_middleware.rs  cors.rs  mod.rs
src/migrations/: clickhouse.rs  diesel.rs  mod.rs
src/models/: auth.rs  link.rs  mod.rs  password_reset.rs  payment.rs  refresh_token.rs  user.rs
src/services/: analytics.rs  background_tasks.rs  click_tracking.rs  clickhouse_analytics.rs  jwt.rs  link.rs  mod.rs  password_reset.rs  rate_limit.rs  short_code.rs  subscription.rs  verification.rs
src/services/email/: builders.rs  mod.rs  sender.rs  types.rs
src/templates/email/: password_changed.html  password_reset.html  verification.html  welcome.html
src/utils/: audit_logger.rs  auth_errors.rs  base62.rs  custom_alias_validator.rs  device_fingerprint.rs  link_errors.rs  mod.rs  password.rs  security_scanner.rs  service_error.rs  url_validator.rs  urlhaus_client.rs  validation.rs
tests/: base62_code_generation_test.rs  click_tracking_resilience_test.rs  click_tracking_test.rs  debug_connection_test.rs  email_verification_complete_test.rs  email_verification_integration_test.rs  email_verification_real_integration_test.rs  jwt_basic_test.rs  jwt_integration_test.rs  jwt_refresh_test.rs  jwt_service_test.rs  link_api_test.rs  link_creation_integration_test.rs  link_crud_comprehensive_test.rs  link_crud_simple_test.rs  link_crud_test.rs  login_test.rs  postgres_test.rs  rate_limit_analytics_test.rs  redis_config_test.rs  redis_pool_limit_test.rs  redis_pool_test.rs  refresh_token_integration_test.rs  refresh_token_rotation_test.rs  registration_test.rs  remember_me_simple_test.rs  remember_me_test.rs  short_code_generator_test.rs  simple_link_test.rs  standalone_real_integration_test.rs  test_expired_debug.rs  test_new_features.rs  test_optimizations.rs  url_shortening_test.rs
tests/common/: mod.rs
