[package]
name = "qck-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "qck_backend"
path = "src/lib.rs"

[[bin]]
name = "qck-backend"
path = "src/main.rs"

[dependencies]
# Pin base64ct to avoid edition2024 requirement
base64ct = "=1.6.0"
# Web Framework - Axum
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"

# Database - Diesel with async support
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono", "serde_json", "network-address"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
diesel_migrations = "2.1"
bb8 = "0.8"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"
subtle = "2.5"  # Constant-time comparison for security

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Network types
ipnetwork = "0.20"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenv = "0.15"
config = "0.13"
once_cell = "1.19"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# URL Processing
url = "2.5"
base64 = "0.21"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Rate Limiting
governor = "0.6"

# Email (DEV-103)
resend-rs = "0.2"
handlebars = "5.1"  # For email templates

# Analytics
clickhouse = "0.11"

# Security
argon2 = "=0.5.3"
rand = "0.8"  # Used by redis_pool for jitter
fastrand = "2.0"

# Utilities
lazy_static = "1.4"
deadpool-redis = "0.14"
async-trait = "0.1"

# Cryptographic utilities
ring = "0.17"

# Metrics
prometheus = "0.13"
prometheus-hyper = "0.2"
sha2 = "0.10.9"

[dev-dependencies]
once_cell = "1.19"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "test-util"] }
dotenv = "0.15"
md5 = "0.7"
serial_test = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
